--- a/src/main/resources/static/views/header.html
+++ b/src/main/resources/static/views/header.html
@@ -1,4 +1,4 @@
-<header class="top-header clearfix">
+<header class="top-header clearfix" style="background: #0FA74B;">
     <!-- Logo -->
     <div class="logo">
         <a href="#/">
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
     </div>
-	
+
     <div class="top-nav" data-ng-controller="NavController">
         <ul class="nav-left pull-right list-unstyled">
             <li class="dropdown text-normal nav-profile" uib-dropdown on-toggle="toggled(open)">
@@ -19,10 +19,10 @@
                     <span class="hidden-xs">
                     
 						<span>({{::user.email}})</span>
-                     					
+
                     </span>
                 </a>
-				
+
                 <ul class="pull-right dropdown-menu with-arrow">
                     <li>
                         <a href="#/pages/profile">
@@ -36,12 +36,12 @@
                             <span data-translate="my tasks"></span> <span class="badge badge-danger main-badge" data-ng-show="taskRemainingCount > 0">{{taskRemainingCount}}</span>
                         </a>
                     </li>
-					<li>
+                    <li>
                         <a href="#/pages/signin">
                             <i class="fa fa-sign-in"></i>
                             <span data-translate="login"></span>
                         </a>
-                    </li>					
+                    </li>
                     <li>
                         <a href="" ng-click="logout()">
                             <i class="fa fa-sign-out"></i>
@@ -49,9 +49,9 @@
                         </a>
                     </li>
                 </ul>
-			</li>		
+            </li>
             <li>
-                <a href="#/" data-toggle-nav-collapsed-min class="toggle-min"><i class="fa fa-bars" title="Expand/Contract Menu"></i></a>
+                <a href="#/dashboard2" class="toggle-min"><i class="fa fa-bars" title="Mostrar MENU"></i></a>
             </li>
         </ul>
     </div>
