--- a/src/main/resources/static/views/pages/signin.html
+++ b/src/main/resources/static/views/pages/signin.html
@@ -6,8 +6,8 @@
 
             <div class="form-container" data-ng-controller="LoginController">
                 <form class="form-horizontal">
-                
-                <img class="img-responsive center-block" src="https://www.freelogoservices.com/api/main/ph/zjHl2lgef9cYrQL0JFa7kzbw2vuDpBZNkBjO0Tp9OXdE9g5shnN1i...Bv9ettdV9dsBUGw0pY" />
+
+                    <img class="img-responsive center-block" src="https://www.freelogoservices.com/api/main/ph/zjHl2lgef9cYrQL0JFa7kzbw2vuDpBZNkBjO0Tp9OXdE9g5shnN1i...Bv9ettdV9dsBUGw0pY" />
                     <fieldset>
                         <div class="form-group">
                             <span class="glyphicon glyphicon-envelope"></span>
@@ -18,25 +18,25 @@
                             <input type="password" id="password" ng-model="password" class="form-control input-lg input-round text-center" placeholder="Password">
                         </div>
                         <div class="form-group">
-							<input type="submit" value="Log In" class="btn btn-primary btn-lg btn-round btn-block text-center" ng-click="login()"/>							
+                            <input type="submit" value="Log In" class="btn btn-primary btn-lg btn-round btn-block text-center" ng-click="login()" />
                         </div>
-						<div class="alert alert-danger" ng-show="error">{{error}}</div>						
+                        <div class="alert alert-danger" ng-show="error">{{error}}</div>
                     </fieldset>
                 </form>
 
                 <section>
-                    <p class="text-center"><a href="#/pages/forgot-password">Forgot your password?</a></p>
-                    <p class="text-center text-muted text-small">Don't have an account yet? <a href="#/pages/signup">Sign up</a></p>
+                    <p class="text-center"><a href="#/pages/forgot-password">Esqueceu A SENHA?</a></p>
+                    <p class="text-center text-muted text-small"><a href="#/cadastro">Novo Usuario?</a></p>
                 </section>
-                
+
             </div>
         </div>
     </div>
-	<div data-ui-footer></div>
+    <div data-ui-footer></div>
 </div>
- 
- 
- 
- 
- 
-     </div> 	
+
+
+
+
+
+</div>
