--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="js/thirdparty/angular-toastr/angular-toastr.min.css">	
 		<link rel="stylesheet" href="js/thirdparty/angular-ui-grid/ui-grid.min.css">		
 		<link rel="stylesheet" href="js/thirdparty/angular/angular-csp.css">	
+		<link rel="stylesheet" href="js/thirdparty/jk-carousel/jk-carousel.min.css">
   		<link rel="stylesheet" href="js/thirdparty/angular-xeditable-0.8.1/css/xeditable.css">
   		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
    		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -76,6 +77,8 @@
   		<script src="js/thirdparty/angular-xeditable-0.8.1/js/xeditable.js"></script>
   		<script src="js/thirdparty/moment/moment.js"></script>	
   		
+  		
+  		
   		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -95,6 +98,7 @@
         <script src="scripts/ui/ui.controllers.js"></script>
         <script src="scripts/forms/forms.controllers.js"></script>
         <script src="scripts/tables/tables.controllers.js"></script>
+        <script src="js/thirdparty/jk-carousel/jk-carousel.min.js"></script>
         <script src="scripts/tasks/tasks.all.js"></script>
 		<script src="scripts/charts/charts.chartjs.controllers.js"></script>
 		<script src="scripts/charts/charts.echarts.controllers.js"></script>		
@@ -108,6 +112,7 @@
         <script src="scripts/apps/sysmgmt.data.php.service.js"></script>	
         
         <script src="scripts/commons/factory/jogo.factory.js"></script>		
+        <script src="scripts/commons/factory/Base64.js"></script>	
         <script src="scripts/commons/services/AppService.js"></script>	
         <script src="scripts/commons/services/AuthService.js"></script>	
         <script src="scripts/commons/DialogsController.js"></script>
